--- a/dev/less/import/_mixins.less
+++ b/dev/less/import/_mixins.less
@@ -2,4 +2,11 @@
 	display: inline-block;
 	vertical-align: @va;
 }
+.fonts-top(){
+	text-transform: uppercase;
+	font-family: @medium-fontFamily;
+	font-size: .875rem;
+	letter-spacing: 1px;
+	line-height: 1.125rem;
+}
 
