selectric shadow end

--- a/dev/html/includes/-main.html
+++ b/dev/html/includes/-main.html
@@ -2,17 +2,18 @@
 
 <div class="main">
 	<div class="filter">
-		<div class="view">
-      <select id="basic">
-        <option value="free" selected="">любого типа</option>
-        <option value="kompact">компакт-камера</option>
-        <option value="mirror-free">беззеркальная</option>
-        <option value="mirrors">зеркальаня</option>
-        <option value="middle">среднеформатная</option>
-      </select>
-     </div>
-    </div>
-	</div>
+		<div class="tips">
+			<div class="view">
+		    <select id="basic">
+		      <option value="free">любого типа</option>
+		      <option value="kompact">компакт-камера</option>
+		      <option value="mirror-free">беззеркальная</option>
+		      <option value="mirrors">зеркальная</option>
+		      <option value="middle">среднеформатная</option>
+		    </select>
+   		</div>
+		</div>
+  </div>
 </div>
 
 <!-- end main -->
