--- a/dev/html/includes/-main.html
+++ b/dev/html/includes/-main.html
@@ -3,16 +3,152 @@
 <div class="main">
 	<div class="filter">
 		<div class="tips">
-			<div class="view">
-		    <select id="basic">
-		      <option value="free">любого типа</option>
-		      <option value="kompact">компакт-камера</option>
-		      <option value="mirror-free">беззеркальная</option>
-		      <option value="mirrors">зеркальная</option>
-		      <option value="middle">среднеформатная</option>
-		    </select>
-   		</div>
-		</div>
+	    <select id="tips">
+	      <option value="free">любого типа</option>
+	      <option value="kompact">компакт-камера</option>
+	      <option value="mirror-free">беззеркальная</option>
+	      <option value="mirrors">зеркальная</option>
+	      <option value="middle">среднеформатная</option>
+	    </select>
+ 		</div>
+		<div class="brands">
+	    <select id="brands">
+	      <option value="free-brand">любого бренда</option>
+	      <option value="canon">canon</option>
+	      <option value="sony">sony</option>
+	      <option value="fujifilm">fujifilm</option>
+	      <option value="samsung">samsung</option>
+	      <option value="olympus">olympus</option>
+	      <option value="panasonic">panasonic</option>
+	      <option value="polaroid">polaroid</option>
+	    </select>
+ 		</div>
+ 		<p>по цене</p>
+ 		<div class="filter-price">
+	 		<input type="text">
+	 		<input type="text">
+ 		</div>
+ 		<p>рублей</p>
+  </div>
+  <div class="content">
+  	<div class="item">
+  		<div class="img-wrap">
+  			<img src="img/1200d.jpg" alt="">
+			</div>
+  		<p class="title">Canon EOS 1200D Kit 18-55mm IS II</p>
+  		<p class="sub-title">Зеркальная, 18 Мп 1.6 crop, с объективом F3.5-5.6 18-55 мм, экран 3", видоискатель оптический</p>
+  		<div class="item-price">
+  			<p>5 967 000 руб.</p>
+  			<span></span>
+  		</div>
+  	</div>
+  	<div class="item">
+  		 <div class="banner">
+  		 	<p>Экшен-камера Xiaomi Yi Action Camera Basic Edition</p>
+  		 </div>
+  	</div>
+  	<div class="item">
+  		<div class="img-wrap">
+  			<img src="img/700d.jpg" alt="700d">
+			</div>
+  		<p class="title">Canon EOS 700D Kit 18-55mm IS STM</p>
+  		<p class="sub-title">Зеркальная, 18 Мп 1.6 crop, с объективом F3.5-5.6 18-55 мм, экран 3", видоискатель оптический</p>
+  		<div class="item-price">
+  			<p>8 355 000 руб.</p>
+  			<span></span>
+  		</div>
+  	</div>
+  	<div class="item">
+  		<div class="img-wrap">
+  			<img src="img/x100s.jpg" alt="x100s">
+			</div>
+  		<p class="title">Fujifilm X100S</p>
+  		<p class="sub-title">Компакт-камера, 16.3 Мп 1.5 crop, F2.0 35 мм, экран 2.8</p>
+  		<div class="item-price">
+  			<p>12 999 000 руб.</p>
+  			<span></span>
+  		</div>
+  	</div>
+  	<div class="item">
+  		<div class="img-wrap">
+  			<img src="img/d3200.jpg" alt="d3200">
+			</div>
+  		<p class="title">Nikon D3200 Kit 18-55mm VR</p>
+  		<p class="sub-title">Зеркальная, 24 Мп 1.5 crop, с объективом F3.5-5.6 18-55 мм, экран 3", видоискатель оптический</p>
+  		<div class="item-price">
+  			<p>5 967 000 руб.</p>
+  			<span></span>
+  		</div>
+  	</div>
+  	<div class="item">
+  		<div class="img-wrap">
+  			<img src="img/a5000.jpg" alt="a5000">
+			</div>
+  		<p class="title">Sony Alpha a5000 Kit 16-50mm</p>
+  		<p class="sub-title">Беззеркальная, 20.1 Мп 1.5 crop, с объективом F3.5-5.6 16-50 мм, экран 3", поворотный, WiFi</p>
+  		<div class="item-price">
+  			<p>6 900 000 руб.</p>
+  			<span></span>
+  		</div>
+  	</div>
+  	<div class="item">
+  		<div class="banner_b"></div>
+  	</div>
+  	<div class="item">
+  		<div class="img-wrap">
+  			<img src="img/g7x.jpg" alt="g7x">
+			</div>
+  		<p class="title">Canon PowerShot G7 X</p>
+  		<p class="sub-title">Компкт-камера, 20.2 Мп 1", F1.8-2.8 24-100мм, экран 3" сенсорный, видоискатель электронный WiFi</p>
+  		<div class="item-price">
+  			<p>8 499 000 руб.</p>
+  			<span></span>
+  		</div>
+  	</div>
+  	<div class="item">
+  		<div class="img-wrap">
+  			<img src="img/700d.jpg" alt="700d">
+			</div>
+  		<p class="title">Canon EOS 700D Kit 18-55mm IS STM</p>
+  		<p class="sub-title">Зеркальная, 18 Мп 1.6 crop, с объективом F3.5-5.6 18-55 мм, экран 3", видоискатель оптический</p>
+  		<div class="item-price">
+  			<p>8 355 000 руб.</p>
+  			<span></span>
+  		</div>
+  	</div>
+  	<div class="item">
+  		<div class="img-wrap">
+  			<img src="img/x100s.jpg" alt="x100s">
+			</div>
+  		<p class="title">Fujifilm X100S</p>
+  		<p class="sub-title">Компакт-камера, 16.3 Мп 1.5 crop, F2.0 35 мм, экран 2.8</p>
+  		<div class="item-price">
+  			<p>12 999 000 руб.</p>
+  			<span></span>
+  		</div>
+  	</div>
+  	<div class="item">
+  		<div class="img-wrap">
+  			<img src="img/d3200.jpg" alt="d3200">
+			</div>
+  		<p class="title">Nikon D3200 Kit 18-55mm VR</p>
+  		<p class="sub-title">Зеркальная, 24 Мп 1.5 crop, с объективом F3.5-5.6 18-55 мм, экран 3", видоискатель оптический</p>
+  		<div class="item-price">
+  			<p>5 967 000 руб.</p>
+  			<span></span>
+  		</div>
+  	</div>
+  	<div class="item">
+  		<div class="img-wrap">
+  			<img src="img/a5000.jpg" alt="a5000">
+			</div>
+  		<p class="title">Sony Alpha a5000 Kit 16-50mm</p>
+  		<p class="sub-title">Беззеркальная, 20.1 Мп 1.5 crop, с объективом F3.5-5.6 16-50 мм, экран 3", поворотный, WiFi</p>
+  		<div class="item-price">
+  			<p>6 900 000 руб.</p>
+  			<span></span>
+  		</div>
+  	</div>
   </div>
 </div>
 
