--- a/dev/less/import/_setting.less
+++ b/dev/less/import/_setting.less
@@ -4,6 +4,7 @@
 @secondColor: #444444;
 @activeColor: #acb4bf;
 @gray: #999;
+@light-gray: #e6e6e6;
 @placeholder: #699fff;
 // @blackColor: #000;
 
