--- a/dev/less/import/header.less
+++ b/dev/less/import/header.less
@@ -77,7 +77,7 @@ header{
 		a{
 			position: relative;
 			flex-shrink: 0;
-			padding: 15px 15px 15px 35px;
+			padding: 15px 0 15px 35px;
 			&:before{
 				content: '';
 				left: 8px;
