--- a/dev/less/import/selectric.less
+++ b/dev/less/import/selectric.less
@@ -85,6 +85,7 @@
 }
 
 .selectric-open .selectric {
+  border-color: #e6e6e6;
   border-left: none;
   border-right: none;
   box-shadow: 0px 10px 0 0 #fff, 0px 5px 5px 0 rgba(0, 0, 0, 0.2);
@@ -163,8 +164,10 @@
 
 /* Items box */
 .selectric-items {
+  background-color: #fff;
   display: none;
   position: absolute;
+  height: auto;
   top: 100%;
   left: 0;
   z-index: -1;
@@ -195,7 +198,7 @@
 }
 
 .selectric-items li.selected {
-  // background: rgba(68, 136, 255, .05);
+  // 
   // color: @baseColor;
 }
 
