--- a/dev/html/includes/-footer.html
+++ b/dev/html/includes/-footer.html
@@ -1,9 +1,11 @@
 <!-- start footer -->
 
 <div class="footer">
-	<span>&copy; Технопарк 2016</span>
-	<a href="#">Доставка и оплата</a>
-	<a href="#">Тухническая поддержка</a>
+	<div class="footer-info">
+		<span>&copy; Технопарк 2016</span>
+		<a href="#">Доставка и оплата</a>
+		<a href="#">Тухническая поддержка</a>
+	</div>
 	<div class="make-in">
 		<span>Сделано в</span>
 		<a href="#">Студии Вадима Скротского</a>
