--- a/dev/html/includes/-main.html
+++ b/dev/html/includes/-main.html
@@ -31,7 +31,7 @@
  		<p>рублей</p>
   </div>
   <div class="content">
-  	<div class="item">
+    <a href="#" class="item modale">
   		<div class="img-wrap">
   			<img src="img/1200d.jpg" alt="">
 			</div>
@@ -41,13 +41,13 @@
   			<p>5 967 000 руб.</p>
   			<span></span>
   		</div>
-  	</div>
-  	<div class="item">
+  	</a>
+  	<a href="#" class="item modale">
   		 <div class="banner">
   		 	<p>Экшен-камера Xiaomi Yi Action Camera Basic Edition</p>
-  		 </div>
-  	</div>
-  	<div class="item">
+	     </div>
+    </a>
+  	<a href="#" class="item modale">
   		<div class="img-wrap">
   			<img src="img/700d.jpg" alt="700d">
 			</div>
@@ -57,8 +57,8 @@
   			<p>8 355 000 руб.</p>
   			<span></span>
   		</div>
-  	</div>
-  	<div class="item">
+  	</a>
+  	<a href="#" class="item modale">
   		<div class="img-wrap">
   			<img src="img/x100s.jpg" alt="x100s">
 			</div>
@@ -68,8 +68,8 @@
   			<p>12 999 000 руб.</p>
   			<span></span>
   		</div>
-  	</div>
-  	<div class="item">
+  	</a>
+  	<a href="#" class="item modale">
   		<div class="img-wrap">
   			<img src="img/d3200.jpg" alt="d3200">
 			</div>
@@ -79,8 +79,8 @@
   			<p>5 967 000 руб.</p>
   			<span></span>
   		</div>
-  	</div>
-  	<div class="item">
+  	</a>
+  	<a href="#" class="item modale">
   		<div class="img-wrap">
   			<img src="img/a5000.jpg" alt="a5000">
 			</div>
@@ -90,11 +90,11 @@
   			<p>6 900 000 руб.</p>
   			<span></span>
   		</div>
-  	</div>
-  	<div class="item">
+  	</a>
+  	<a href="#" class="item modale">
   		<div class="banner_b"></div>
-  	</div>
-  	<div class="item">
+  	</a>
+  	<a href="#" class="item modale">
   		<div class="img-wrap">
   			<img src="img/g7x.jpg" alt="g7x">
 			</div>
@@ -104,8 +104,8 @@
   			<p>8 499 000 руб.</p>
   			<span></span>
   		</div>
-  	</div>
-  	<div class="item">
+  	</a>
+  	<a href="#" class="item modale">
   		<div class="img-wrap">
   			<img src="img/700d.jpg" alt="700d">
 			</div>
@@ -115,8 +115,8 @@
   			<p>8 355 000 руб.</p>
   			<span></span>
   		</div>
-  	</div>
-  	<div class="item">
+  	</a>
+  	<a href="#" class="item modale">
   		<div class="img-wrap">
   			<img src="img/x100s.jpg" alt="x100s">
 			</div>
@@ -126,8 +126,8 @@
   			<p>12 999 000 руб.</p>
   			<span></span>
   		</div>
-  	</div>
-  	<div class="item">
+  	</a>
+  	<a href="#" class="item modale">
   		<div class="img-wrap">
   			<img src="img/d3200.jpg" alt="d3200">
 			</div>
@@ -137,8 +137,8 @@
   			<p>5 967 000 руб.</p>
   			<span></span>
   		</div>
-  	</div>
-  	<div class="item">
+  	</a>
+  	<a href="#" class="item modale">
   		<div class="img-wrap">
   			<img src="img/a5000.jpg" alt="a5000">
 			</div>
@@ -148,7 +148,7 @@
   			<p>6 900 000 руб.</p>
   			<span></span>
   		</div>
-  	</div>
+  	</a>
   </div>
 </div>
 
