--- a/dev/less/import/header.less
+++ b/dev/less/import/header.less
@@ -67,6 +67,9 @@ header{
 			padding: 15px;
 			&:first-child{
 				padding-left: 0;
+				&:hover{
+					padding-left: 5px;
+				}
 			}
 			&:hover{
 				background-color: #447ada;
@@ -87,9 +90,6 @@ header{
 				width: 20px;
 				height: 20px;
 				background-image: url(../img/icons/cart_white.svg);
-			}
-			&:hover{
-				background-color: #447ada;
 			}
 		}
 	}
