menu in progress

--- a/dev/html/includes/-header.html
+++ b/dev/html/includes/-header.html
@@ -19,7 +19,7 @@
 			<a href="#">телевизоры</a>
 		</nav>
 		<div class="cart">
-			<a href="#">корзина</a>
+			<a href="#"><span>корзина</span></a>
 		</div>
 	</div>
 </header>
