--- a/dev/less/import/header.less
+++ b/dev/less/import/header.less
@@ -91,6 +91,11 @@ header{
 				height: 20px;
 				background-image: url(../img/icons/cart_white.svg);
 			}
+			@media screen and (max-width: @break_md){
+        span{
+        	display: none;
+        }
+    	}
 		}
 	}
 }
