--- a/dev/less/import/footer.less
+++ b/dev/less/import/footer.less
@@ -12,10 +12,11 @@
 	&-info{
 		span{
 			padding-right: 2%;
+			flex-grow: 0;
 		}
 		a{
-			padding: 0 2%;
 			flex-grow: 0;
+			padding: 0 2%;
 		}
 	}
 }
