adaptiv visual, about filter

--- a/dev/html/includes/-header.html
+++ b/dev/html/includes/-header.html
@@ -11,13 +11,19 @@
 		<a href="#" class="info">доставка и оплата</a>
 	</div>
 	<div class="wrap">
+		<div class="search_sm"></div>
 		<nav>
-			<a href="#">мобильные телефоны</a>
+			<a href="#">мобильные телeфоны</a>
 			<a href="#">планшеты</a>
 			<a href="#" class="active">фототехника</a>
 			<a href="#">ноутбуки</a>
 			<a href="#">телевизоры</a>
+			<div class="nav_sm">
+				<span>Menu</span>
+				<div class="burger"></div>
+			</div>
 		</nav>
+		<a  href="#" class="logo"><img src="img/icons/logo_big.svg" alt="logo"></a>
 		<div class="cart">
 			<a href="#"><span>корзина</span></a>
 		</div>
