--- a/dev/html/includes/-main.html
+++ b/dev/html/includes/-main.html
@@ -42,8 +42,8 @@
   			<span></span>
   		</div>
   	</a>
-  	<a href="#" class="item modale">
-  		 <div class="banner">
+  	<a href="#" class="item modale banner">
+  		 <div class="banner_a">
   		 	<p>Экшен-камера Xiaomi Yi Action Camera Basic Edition</p>
 	     </div>
     </a>
@@ -91,7 +91,7 @@
   			<span></span>
   		</div>
   	</a>
-  	<a href="#" class="item modale">
+  	<a href="#" class="item modale banner">
   		<div class="banner_b"></div>
   	</a>
   	<a href="#" class="item modale">
