--- a/dev/less/import/modal.less
+++ b/dev/less/import/modal.less
@@ -1,20 +1,19 @@
 //  modal start
 
 #modal_form {
-	width: 700px; 
-	height: 873px;
+	width: 60%; 
+	height: 90%;
 	background: #fff;
 	box-shadow: 0 5px 5px 0 rgba(0, 0, 0, .2);
 	position: fixed;
-	top: 45%; 
-	left: 50%; 
-	bottom: 0;
+	top: 0; 
+	left: 0; 
+	bottom: 50%;
 	right: 0;
-	margin-top: -437px;
-	margin-left: -350px; 
 	display: none; 
 	opacity: 0; 
 	z-index: 5; 
+	margin: auto;
 	padding: 30px;
 }
 
@@ -41,14 +40,16 @@
 }
 
 .modal{
+	display: flex;
 	flex-direction: column;
 	img{
 		margin-top: 30px;
 		align-self: center;
-		max-width: 500px;
+		max-height: 40%;
 		margin-bottom: 30px;
 	}
 	&-main{
+		max-height: 60%;
 		display: flex;
 		.right, .left {
 			padding-top: 30px;
@@ -84,6 +85,7 @@
 			border-left: 1px solid @light-gray;
 			.price{
 				margin-bottom: 30px;
+				flex-shrink: 0;
 			}
 			.in-cart{
 				font-family: @medium-fontFamily;
